@@ -65,6 +65,7 @@ call_user_func(function () {
         include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/Objects/ProtectedProperties.php';
         include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/Objects/PublicProperties.php';
         include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/Objects/Traversable.php';
+        include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/Objects/ErrorObject.php';
 
         include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/BacktraceStep.php';
         include_once KREXX_DIR . 'src/Analyse/Callback/Analyse/ConfigSection.php';
