@@ -1,0 +1,117 @@
+<?php
+/**
+ * kreXX: Krumo eXXtended
+ *
+ * kreXX is a debugging tool, which displays structured information
+ * about any PHP object. It is a nice replacement for print_r() or var_dump()
+ * which are used by a lot of PHP developers.
+ *
+ * kreXX is a fork of Krumo, which was originally written by:
+ * Kaloyan K. Tsvetkov <kaloyan@kaloyan.info>
+ *
+ * @author
+ *   brainworXX GmbH <info@brainworxx.de>
+ *
+ * @license
+ *   http://opensource.org/licenses/LGPL-2.1
+ *
+ *   GNU Lesser General Public License Version 2.1
+ *
+ *   kreXX Copyright (C) 2014-2019 Brainworxx GmbH
+ *
+ *   This library is free software; you can redistribute it and/or modify it
+ *   under the terms of the GNU Lesser General Public License as published by
+ *   the Free Software Foundation; either version 2.1 of the License, or (at
+ *   your option) any later version.
+ *   This library is distributed in the hope that it will be useful, but WITHOUT
+ *   ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ *   FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License
+ *   for more details.
+ *   You should have received a copy of the GNU Lesser General Public License
+ *   along with this library; if not, write to the Free Software Foundation,
+ *   Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ */
+
+namespace Brainworxx\Krexx\Tests\Analyse\Callback\Analyse\Objects;
+
+use Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\ErrorObject;
+use Brainworxx\Krexx\Analyse\Code\Codegen;
+use Brainworxx\Krexx\Analyse\Routing\Process\ProcessBacktrace;
+use Brainworxx\Krexx\Krexx;
+use Brainworxx\Krexx\Tests\Helpers\AbstractTest;
+use Brainworxx\Krexx\Tests\Helpers\CallbackCounter;
+
+class ErrorObjectTest extends AbstractTest
+{
+    /**
+     * @var \Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\ErrorObject
+     */
+    protected $errorObject;
+
+    public function setUp()
+    {
+        parent::setUp();
+        $this->errorObject = new ErrorObject(Krexx::$pool);
+        Krexx::$pool->rewrite = [
+            ProcessBacktrace::class => CallbackCounter::class
+        ];
+    }
+
+    /**
+     * Test with a normal object.
+     *
+     * @covers \Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\ErrorObject::callMe
+     */
+    public function testCallMeNothing()
+    {
+        // Setup the start events
+        $this->mockEventService(
+            ['Brainworxx\\Krexx\\Analyse\\Callback\\Analyse\\Objects\\ErrorObject::callMe::start', $this->errorObject]
+        );
+        $fixture = [
+            $this->errorObject::PARAM_DATA => new \stdClass()
+        ];
+
+        $this->errorObject
+            ->setParams($fixture)
+            ->callMe();
+        // Should not be called.
+        $this->assertEmpty(CallbackCounter::$staticParameters);
+    }
+
+    /**
+     * Test with a 'real' error object.
+     *
+     * @covers \Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\ErrorObject::callMe
+     */
+    public function testCallMe()
+    {
+        $this->mockEmergencyHandler();
+
+        $this->mockEventService(
+            ['Brainworxx\\Krexx\\Analyse\\Callback\\Analyse\\Objects\\ErrorObject::callMe::start', $this->errorObject],
+            ['Brainworxx\\Krexx\\Analyse\\Callback\\Analyse\\Objects\\ErrorObject::analysisEnd',  $this->errorObject]
+        );
+
+        $backtrace = ['some backtrace'];
+        $errorObject = new \Exception();
+
+        $this->setValueByReflection('trace', $backtrace, $errorObject);
+
+
+        $codegenMock = $this->createMock(Codegen::class);
+        $codegenMock->expects($this->exactly(2))
+            ->method('setAllowCodegen')
+            ->withConsecutive(
+                [false],
+                [true]
+            );
+        Krexx::$pool->codegenHandler = $codegenMock;
+
+        $fixture = [
+            $this->errorObject::PARAM_DATA => $errorObject
+        ];
+        $this->errorObject->setParams($fixture)->callMe();
+        $this->assertEquals($backtrace, CallbackCounter::$staticParameters[0][$this->errorObject::PARAM_DATA]);
+    }
+}
