@@ -7,6 +7,7 @@
 - The bracktrace action accepts now an already existing one. Great
   for debugging error objects.
 - Minor usability changes to both skins.
+- Added an automatic backtrace analysis for error objects.
 - Change: Deprecated the AbstractProcess class.
 - Change: Deprecated the Krexx main class. The "new" one resides
   now inside the src folder.
